--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 .env.test.local
 .env.production.local
 
+# Package manager files/logs
+.yarn
+.yarnrc.yml
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
