--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,31 +1,23 @@
-name: 🐛 Bug report
+name: Bug Report
 description: Create a report to help us improve
-labels: ["bug"]
-
+title: "[Bug]: "
+labels: ["🚦 status: awaiting triage"]
 body:
-  # checkbox which asks the user if they have checked if the same type of issue has already been raised
-
-  - type: checkboxes
-    id: duplicate
-    attributes:
-      label: Have you checked if the same issue has already been raised ?
-      options:
-        - label: I have checked and didn't find similar issue
-          required: true
-
   - type: textarea
     id: description
     attributes:
-      label: Describe the bug
-      description: A clear and concise description of what the bug is
+      label: Description
+      description: A clear and concise description of what the bug is.
+      placeholder: When I go to the home page, the image doesn't load and returns a 404 error code
     validations:
       required: true
 
   - type: textarea
     id: reproduce
     attributes:
-      label: Steps to reproduce
-      description: Steps to reproduce the behavior
+      label: To Reproduce
+      description: Steps to reproduce the behavior you were facing.
+      placeholder: How can someone reproduce the behavior you were facing?
       value: |
         1. Go to '...'
         2. Click on '....'
@@ -35,47 +27,19 @@ body:
       required: true
 
   - type: textarea
-    id: expected
     attributes:
-      label: Expected behavior
-      description: A clear and concise description of what you expected to happen.
-    validations:
-      required: true
+      label: Anything else?
+      description: |
+        Links? References? Anything that will give us more context about the issue you are encountering!
 
-  - type: textarea
-    id: screenshots
-    attributes:
-      label: Screenshots
-      description: Please add screenshots if applicable
+        Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
     validations:
       required: false
 
-  - type: textarea
+  - type: checkboxes
+    id: guidelines
     attributes:
-      label: Desktop
-      description: Please complete the following information
-      value: |
-        - OS: [e.g. iOS]
-        - Browser: [e.g. chrome, safari]
-        - Version: [e.g. 22]
-    validations:
-      required: false
-
-  - type: textarea
-    attributes:
-      label: Smartphones
-      description: Please complete the following information
-      value: |
-        - Device: [e.g. iPhone6]
-        - OS: [e.g. iOS8.1]
-        - Browser [e.g. stock browser, safari]
-        - Version [e.g. 22]
-    validations:
-      required: false
-
-  - type: textarea
-    attributes:
-      label: Additional context
-      description: Add any other context about the problem here.
-    validations:
-      required: false
+      label: Code of Conduct
+      options:
+        - label: I agree to follow this project's [Code of Conduct](https://github.com/FrancescoXX/4c-site/blob/main/docs/CODE_OF_CONDUCT.md)
+          required: true
