--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,35 +1,42 @@
-name: 🚀 Feature request
-description: Suggest an idea for this project !
-labels: ["enhancement"]
+name: Feature Request
+description: Suggest an idea for this project
+title: '[Feat]: '
+labels: ['🚦 status: awaiting triage']
 body:
   - type: textarea
     id: description
     attributes:
-      label: Is your feature request related to a problem? Please describe.
-      description: A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
+      label: Description
+      description: Is your feature request related to a problem? Please describe.
+      placeholder: "I'm always frustrated when [...]"
+      value: "I'm always frustrated when [...]"
     validations:
       required: true
 
   - type: textarea
     id: solution
     attributes:
-      label: Describe the solution you'd like
+      label: Solution
       description: A clear and concise description of what you want to happen.
-    validations:
-      required: true
-
-  - type: textarea
-    id: alternatives
-    attributes:
-      label: Describe alternatives you've considered
-      description: A clear and concise description of any alternative solutions or features you've considered.
+      placeholder: I want a discord command `!server` to be added where we can view the server member count
+      value: 'I want'
     validations:
       required: false
 
   - type: textarea
-    id: extrainfo
     attributes:
-      label: Additional context
-      description: Add any other context or screenshots about the feature request here.
+      label: Anything else?
+      description: |
+        Links? References? Anything that will give us more context about the issue you are encountering!
+
+        Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
     validations:
       required: false
+
+  - type: checkboxes
+    id: guidelines
+    attributes:
+      label: Code of Conduct
+      options:
+        - label: I agree to follow this project's [Code of Conduct](https://github.com/FrancescoXX/4c-site/blob/main/docs/CODE_OF_CONDUCT.md)
+          required: true
