--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0"
+    "@commitlint/cli": "^17.4.0",
+    "@commitlint/config-conventional": "^17.4.0",
+    "@docusaurus/module-type-aliases": "2.2.0",
+    "husky": "^8.0.3"
   },
   "browserslist": {
     "production": [
