--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,29 +1,56 @@
-name: Releases
+
+name: Release
 on:
- push:
-   branches:
-     - main
+  push:
+    branches:
+      - main
 
 jobs:
- changelog:
-   runs-on: ubuntu-latest
+  lint:
+    name: Lint Before Release
+    if: github.repository_owner == 'FrancescoXX'
+    runs-on: ubuntu-latest
 
-   steps:
-     - uses: actions/checkout@v2
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Lint
+        run: yarn lint
 
-     - name: conventional Changelog Action
-       id: changelog
-       uses: TriPSs/conventional-changelog-action@v3.7.1
-       with:
-         github-token: ${{ secrets.GITHUB_TOKEN }}
-         version-file: './package.json,./package-lock.json'
+  build:
+    name: Try to Build Before Release
+    if: github.repository_owner == 'FrancescoXX'
+    runs-on: ubuntu-latest
+    needs: lint
 
-     - name: create release
-       uses: actions/create-release@v1
-       if: ${{ steps.changelog.outputs.skipped == 'false' }}
-       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       with:
-         tag_name: ${{ steps.changelog.outputs.tag }}
-         release_name: ${{ steps.changelog.outputs.tag }}
-         body: ${{ steps.changelog.outputs.clean_changelog }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Build
+        run: yarn build
+
+  release:
+    name: Create GitHub Release
+    if: github.repository_owner == 'FrancescoXX'
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Release package
+        run: yarn release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
